fix:- Folder rearranged

--- a/Resume/resume_task1.html
+++ b/Resume/resume_task1.html
@@ -12,7 +12,7 @@
                 </div> 
             </div>
             <div class="image">
-                <img src="download.png" alt="Profile picture" id="image_id">
+                <img src="img/anish.jpg" alt="Profile picture" id="image_id">
             </div>
         </div>
         <div class="container">
