faet:-Designed from departments to facilities and activities

--- a/gg_figma/top_header/top_header.html
+++ b/gg_figma/top_header/top_header.html
@@ -1,4 +1,4 @@
-sw<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
     <head>
         <title>GG-Hospital</title>
@@ -6,6 +6,7 @@ sw<!DOCTYPE html>
         <link rel="stylesheet" href="/gg_figma/nav_bar/nav_bar.css">
     </head>
     <body>
+
         <div class="header">
             <div>
                 <img src="/gg_figma/nav_bar/img/logo.png" alt="logo">
@@ -21,10 +22,11 @@ sw<!DOCTYPE html>
                 <a href="#contact">Contact Us</a>
             </div>
         </div>
+
         <div class="top_header">
 
             <div class="doctor_image">
-                <img src="img/doctor_img.png" width="99%" alt="image">
+                <img src="img/doctor_img.png" width="100%" alt="image">
             </div>
 
             <div class="content">
@@ -56,6 +58,73 @@ sw<!DOCTYPE html>
                     </select>
                     <button class="small large">Book an Appointment</button>
                 </div>
+            </div>
+
+            <div id="our_dept"></div>
+                <h2>Our<br>Departments</h2>
+                <div class="our_dept">
+                    <div id="dept_row1">
+                        <img src="img/dept1.png" alt="Surgery department image">
+                        <img src="img/dept2.png" alt="Oncology department image">
+                        <img src="img/dept3.png" alt="ENT department image">
+                    </div>
+                    <div id="dept_row2">
+                        <div class="dept_row2_style"><h3>Hepatobiliary Surgery</h3>The Hepatobiliary and Transplantology 
+                            Unit of GG Hospital offers a comprehensive...</div>
+                        <div class="dept_row2_style"><h3>Medical Oncology</h3>GG Hospital is the best affordable hospital in 
+                            South Kerala which is NABH accredited hospital...</div>
+                        <div class="dept_row2_style"><h3>ENT, Head & Neck Skull Surgery</h3>The ENT Departmnt in GG Hospital provides a 
+                            wide range of treatment modalities including...</div>
+                    </div>
+                    <div id="dept_row3">
+                        <div class="dept_row3_style">Read More</div>
+                        <div class="dept_row3_style">Read More</div>
+                        <div class="dept_row3_style">Read More</div>
+                    </div>
+                </div>
+            </div>
+
+            <div id="why_gg">
+                <div class="why_gg_img">
+                    <img src="img/why gg.png" alt="Why GG hospital image">
+                </div>
+                <div id="why_gg_text">
+                    <h3>Why GG Hospital</h3>
+                    <img src="img/tick_mark.png" alt="bullet point"> Multi-super speciality hospital in South Kerala.<br>
+                    <img src="img/tick_mark.png" alt="bullet point"> Achieved the unique reputation.<br>
+                    <img src="img/tick_mark.png" alt="bullet point"> Multi-super speciality hospital in South Kerala.<br>
+                    <img src="img/tick_mark.png" alt="bullet point"> Multi-super speciality hospital in South Kerala.<br>
+                    <img src="img/tick_mark.png" alt="bullet point"> Multi-super speciality hospital in South Kerala.
+                </div>
+            </div>
+
+            <div id="specialist">
+                <div class="specialist_heading">
+                    <h2>Meet Our Specialist</h2>
+                    <p>We have the best Doctors in GG</p>
+                </div>
+                <div id="specialist_img">
+                    <img src="img/specialist1.png" alt="specialist1"> 
+                    <img src="img/specialist2.png" alt="specialist2"> 
+                    <img src="img/specialist3.png" alt="specialist3"> 
+                    <img src="img/specialist4.png" alt="specialist4"> 
+                </div>
+                <div id="specialist_name">
+                    <div class="specialist_text"><h3>Lisha Powell</h3>ENT Specialists</div>
+                    <div class="specialist_text"><h3>Chris Nelson</h3>Cardiologists</div>
+                    <div class="specialist_text"><h3>Linda Stapleton</h3>Orthopaedic surgeons</div>
+                    <div class="specialist_text"><h3>Sandra John</h3>Psychiartrists</div>
+                </div>
+            </div>
+
+            <div id="facilities">
+                    <h2>Facilities & Activities</h2>
+                <div id="facilities_img">
+                    <img src="img/facilities1.png" alt="specialist1"> 
+                    <img src="img/facilities2.png" alt="specialist2"> 
+                    <img src="img/facilities3.png" alt="specialist3"> 
+                </div>
+            </div>
         </div>
     </body>
 </html>
