--- a/gg_figma/top_header/top_header.html
+++ b/gg_figma/top_header/top_header.html
@@ -3,11 +3,36 @@
     <head>
         <title>GG-Hospital</title>
         <link rel="stylesheet" href="top_header.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="/gg_figma/nav_bar/nav_bar.css">
     </head>
     <body>
 
-        <div class="header">
+        <header>
+            <div id="header_icon">
+                <div id="left_header">
+                    <p>Follow us on :
+                    <i class="fa fa-linkedin"></i>&nbsp;
+                    <i class="fa fa-youtube-play"></i>&nbsp;
+                    <i class="fa fa-instagram"></i>&nbsp;
+                    <i class="fa fa-facebook-f"></i>
+                    </p>
+                </div>
+                <div id="right_header">
+                    <p>
+                    <i class="fa fa-phone"></i>
+                    04712779100 | 04712779101 &nbsp;
+                    <i class="fa fa-envelope"></i>
+                    gghospitalphkpl@gmail.com | edoffice@gg-hospital.com
+                    </p>
+                </div>
+            </div>
+        </header>
+
+        <div class="nav_container">
             <div>
                 <img src="/gg_figma/nav_bar/img/logo.png" alt="logo">
             </div>
@@ -118,13 +143,114 @@
             </div>
 
             <div id="facilities">
-                    <h2>Facilities & Activities</h2>
+                <h2>Facilities & Activities</h2>
                 <div id="facilities_img">
                     <img src="img/facilities1.png" alt="specialist1"> 
                     <img src="img/facilities2.png" alt="specialist2"> 
                     <img src="img/facilities3.png" alt="specialist3"> 
                 </div>
             </div>
+
+            <div id="interest">
+                <h2>You may be Interested</h2>
+                <div id="interest_img">
+                    <img src="img/interested1.png" alt="Interest 1 image">
+                    <img src="img/interested2.png" alt="Interest 2 image">
+                    <img src="img/interested3.png" alt="Interest 3 image">
+                </div>
+                <div id="interest_text">
+                    <div class="interest_text_style">
+                        <h3>Hepatobiliary Surgery</h3>The Hepatobiliary and Transplantology 
+                        Unit of GG Hospital offers a comprehensive... <span class="interest_read">Read More</span>
+                    </div>
+                    <div class="interest_text_style">
+                        <h3>Hepatobiliary Surgery</h3>The Hepatobiliary and Transplantology 
+                        Unit of GG Hospital offers a comprehensive... <span class="interest_read">Read More</span>
+                    </div>
+                    <div class="interest_text_style">
+                        <h3>Hepatobiliary Surgery</h3>The Hepatobiliary and Transplantology 
+                        Unit of GG Hospital offers a comprehensive... <span class="interest_read">Read More</span>
+                    </div>
+                </div>
+            </div>
+
+            <div id="blue_background">
+                <div id="newsletter_box">
+                    <div id="newsletter">
+                        <div id="newsletter_content1"><h3>Subscribe our<br>Newsletter Sign up</h3></div>
+                        <div id="newsletter_content2">
+                            <input type="email" placeholder="Enter your mail id" required>
+                            <button class="button small">Subscribe</button><hr>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+
+        <footer id="footer">
+
+            <div id="up_foot">
+                <div id="up_1">
+                    <img id="up_img" src="/gg_figma/nav_bar/img/logo.png" alt="logo">
+                    <p>GG Hospital is the flagship hospital of the Sree<br>
+                    Gokulam Group of Companies. Our journey started <br>
+                    on 27th January 2016 for the common<br>
+                    people in Trivandrum.</p>
+                </div>
+                &nbsp;
+                <div id="up_2">
+                    <h4>About GG</h4>
+                    <div id="up2_grid">
+                        <p class="up2_class">About us</p>
+                        <p class="up2_class">Academic</p>
+                        <p class="up2_class">Hospital</p>
+                        <p class="up2_class">Department</p>
+                    </div>
+                </div>
+                <div id="up_3">
+                    <h4>Legal</h4>
+                    <div id="up3_grid">
+                        <p class="up3_class">Privacy Policy</p>
+                        <p class="up3_class">Documentation</p>
+                        <p class="up3_class">Terms of Services</p>
+                        <p class="up3_class">Site Map</p>
+                    </div>
+                </div>
+            </div>
+
+            <div id="foot_line"><hr id="foot_hr"></div>
+
+            <div id="down_foot">
+                <div id="down_1">
+                    <i class="fa fa-home"></i>
+                    <p>Medical College, Pattom Kumarapuram Rd, <br>Murinjapalam,Thiruvananthapuram, Kerala 695011</p>
+                </div>
+                <div id="down_2">
+                    <i class="fa fa-phone"></i>
+                    <p>0471 2779100 <br>
+                    0471 2779101  <br>        
+                    0471 4299299</p>
+                </div>
+                <div id="down_3">
+                    <i class="fa fa-envelope"></i>
+                    <p>gghospitalphkpl@gmail.com <br>
+                    mdoffice@gg-hospital.com</p>
+                </div>
+                <div id="down_4">
+                    <h3>We are on Social Media</h3>
+                    <div id="down_4_icon">
+                        <p class="foot_icons">
+                            <i class="fa fa-linkedin"></i>&nbsp;
+                            <i class="fa fa-youtube-play"></i>&nbsp;
+                            <i class="fa fa-instagram"></i>&nbsp;
+                            <i class="fa fa-facebook-f"></i>&nbsp;
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div id="footer_end">© 2023 GG Hospital.</div>
+
+        </footer>
     </body>
 </html>
