fix:-Edited styling

--- a/gg_figma/top_header/top_header.html
+++ b/gg_figma/top_header/top_header.html
@@ -14,19 +14,19 @@
         <header>
             <div id="header_icon">
                 <div id="left_header">
-                    <p>Follow us on :
-                    <i class="fa fa-linkedin"></i>&nbsp;
-                    <i class="fa fa-youtube-play"></i>&nbsp;
-                    <i class="fa fa-instagram"></i>&nbsp;
-                    <i class="fa fa-facebook-f"></i>
+                    <p><b>follow us on :</b>
+                        <i class="fa fa-linkedin"></i>&nbsp;
+                        <i class="fa fa-youtube-play"></i>&nbsp;
+                        <i class="fa fa-instagram"></i>&nbsp;
+                        <i class="fa fa-facebook-f"></i>
                     </p>
                 </div>
                 <div id="right_header">
                     <p>
-                    <i class="fa fa-phone"></i>
-                    04712779100 | 04712779101 &nbsp;
-                    <i class="fa fa-envelope"></i>
-                    gghospitalphkpl@gmail.com | edoffice@gg-hospital.com
+                        <i class="fa fa-phone"></i>
+                        04712779100 | 04712779101 &nbsp;
+                        <i class="fa fa-envelope"></i>
+                        gghospitalphkpl@gmail.com | edoffice@gg-hospital.com
                     </p>
                 </div>
             </div>
@@ -58,6 +58,7 @@
                 <h1>Love & Care to<br>Humanity</h1>
                 <h3>Fast-Growing Multi Speciality Hospital <br>in South Kerala</h3>
                 <button class="button small">Book an Appointment</button>
+                <img id="doctors_talk" src="/gg_figma/top_header/img/doctors_talk_img.png" alt="doctors talk image">
             </div>
 
             <div class="appointment">
@@ -176,6 +177,7 @@
 
             <div id="blue_background">
                 <div id="newsletter_box">
+                    <img src="/gg_figma/top_header/img/subscribe_bg_img.png" alt="background image">
                     <div id="newsletter">
                         <div id="newsletter_content1"><h3>Subscribe our<br>Newsletter Sign up</h3></div>
                         <div id="newsletter_content2">
