--- a/gg_figma/nav_bar/nav_bar.html
+++ b/gg_figma/nav_bar/nav_bar.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>GG-Hospital</title>
-        <link rel="stylesheet" href="nav_bar.css">
-    </head>
-    <body>
-        <div class="header">
-            <div>
-                <img src="img/logo.png" alt="logo">
-            </div>
-            <div class="topnav">
-                <a class="active" href="#active">Home</a>
-                <a href="#aboutus">About Us</a>
-                <a href="#patient">Patient Care</a>
-                <a href="#department">Departments</a>
-                <a href="#academic">Academics & Research</a>
-                <a href="#news">News & Media</a>
-                <a href="#career">Careers</a>
-                <a href="#contact">Contact Us</a>
-            </div>
-        </div>
-    </body>
+  <head>
+    <title>GG-Hospital</title>
+    <link rel="stylesheet" href="nav_bar.css" />
+  </head>
+  <body>
+    <div class="header">
+      <div>
+        <img src="/gg_figma/nav_bar/img/logo.png" alt="logo" />
+      </div>
+      <div class="topnav">
+        <a class="active" href="#active">Home</a>
+        <a href="#aboutus">About Us</a>
+        <a href="#patient">Patient Care</a>
+        <a href="#department">Departments</a>
+        <a href="#academic">Academics & Research</a>
+        <a href="#news">News & Media</a>
+        <a href="#career">Careers</a>
+        <a href="#contact">Contact Us</a>
+      </div>
+    </div>
+  </body>
 </html>
